--- a/mail/themes/qute/mail/browserRequest.css
+++ b/mail/themes/qute/mail/browserRequest.css
@@ -63,3 +63,7 @@
   margin: 0px 5px;
   font-weight: normal;
 }
+
+#headerMessage {
+  margin-top: 4px;
+}
